--- a/CMHAVoucherFinder/Views/Properties/Index.cshtml
+++ b/CMHAVoucherFinder/Views/Properties/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@using Microsoft.AspNet.Identity
-@using Microsoft.AspNet.Identity.Owin
-@model IEnumerable<CMHAVoucherFinder.Models.Property>
+﻿@model IEnumerable<CMHAVoucherFinder.Models.Property>
 
 @{
     ViewBag.Title = "My Properties";
