--- a/CMHAVoucherFinder/Views/Shared/_Layout.cshtml
+++ b/CMHAVoucherFinder/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Voucher Housing Finder", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -34,9 +34,11 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Voucher Housing Finder @Html.ActionLink("Contact Us", "Contact", "Home")</p>
-        </footer>
+        <div class="container">
+            <footer>
+                <p>&copy; @DateTime.Now.Year - Voucher Housing Finder @Html.ActionLink("Contact Us", "Contact", "Home")</p>
+            </footer>
+        </div>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
