update about page

--- a/CMHAVoucherFinder/Views/Home/About.cshtml
+++ b/CMHAVoucherFinder/Views/Home/About.cshtml
@@ -1,7 +1,31 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+
+</div>
+<div class="jumbotron container-fluid apartment2-bg">
+    <div class="container jumbotron-container">
+        <h1 class="j-text" style="color: #ffffff;">About Voucher Housing Finder</h1>
+        <p class="lead j-text" style="font-weight: bold;">Quickly Find and Search Properties That Are Voucher Friendly.</p>
+        <p class="lead j-text" style="font-weight: bold;">Find Nearby Schools, Crime Rates and Clinics</p>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12 col-sm-12">
+            <h1>Voucher Housing Finder Helps Struggling Families</h1>
+            <p>Every day, millions of struggling families, homeless individuals and veterans apply for and receive housing vouchers. Unfortunately, when it comes to clearing up the confusion with regards to school systems, crime rates, access to essential public services within walking distance, many websites fall short on delivery.</p>
+
+            <p>That's why Voucher Housing Finder was built. We want low income families to have adequate support when selecting a place to live with a voucher. This means knowing as much about the area before moving in.</p>
+
+            <p>Living in a voucher friendly property shouldn't mean giving up access to good schools, decent food, public transportation or access to health care. We built our site with that goal in mind.</p>
+
+            <p>Regardless of your situation, you are welcome to browse properties at your leisure, contact landlords and use this site as your all in one research portal for voucher friendly housing.</p>
+
+
+        </div>
+    </div>
+
+
+</div>
