--- a/CMHAVoucherFinder/Content/Site.css
+++ b/CMHAVoucherFinder/Content/Site.css
@@ -95,6 +95,21 @@ label, input {
     color: #000;
 }
 
+.apartment2-bg {
+    background: linear-gradient(
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    ), url("../images/apartment2.jpg");
+    background-color: #17234E;
+    margin-bottom: 0;
+    min-height: 300px;
+    background-repeat: no-repeat;
+    background-position: center;
+    -webkit-background-size: cover;
+    background-size: cover;
+    color: #000;
+}
+
 /*Media Queries*/
 
 @media only screen and (max-width: 500px) {
