--- a/CMHAVoucherFinder/Views/Home/Index.cshtml
+++ b/CMHAVoucherFinder/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
         @using (Html.BeginForm("BrowseBy", "Properties"))
         {
             <input type="submit" value="Search Properties" class="btn btn-lg btn-primary" style="margin-right: 10px; font-size: 16px;"/>
-            <input type="text" style="line-height: 30px; font-size: 16px;" id="zipcode" name="zipcode" value="Enter Zip Code" style="display: inline;" onfocus="if (this.value == 'Enter Zip Code') { this.value = ''; }" onblur="if (this.value == '') { this.value = 'Enter Zip Code'; }" />
+            <input type="text" id="zipcode" name="zipcode" value="Enter Zip Code" style="display: inline; line-height: 30px; font-size: 16px;" onfocus="if (this.value == 'Enter Zip Code') { this.value = ''; }" onblur="if (this.value == '') { this.value = 'Enter Zip Code'; }" />
             <input type="hidden" value="50" name="maxdistance" />
             <input type="hidden" value="0" name="minrent" />
             <input type="hidden" value="1000" name="maxrent" />
