--- a/CMHAVoucherFinder/Views/Shared/_Layout.cshtml
+++ b/CMHAVoucherFinder/Views/Shared/_Layout.cshtml
@@ -6,8 +6,6 @@
     <title>@ViewBag.Title - Voucher Housing Match</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBE0BwiPhc62BsK7HIMNjP60ooYkxbNaOI&callback=initMap"
-            async defer></script>
     @Scripts.Render("~/bundles/jquery")
 
 </head>
@@ -21,6 +19,48 @@
                     <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("Voucher Housing Finder", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @using (Html.BeginForm("BrowseBy", "Properties"))
+                {
+                    <button type="button" class="search-form-mobile-toggle" data-toggle="collapse" data-target=".search-form-mobile"><i class="fa fa-search" aria-hidden="true"></i></button>
+                        <div class="search-form-mobile">
+                            <div class="col-sm-12">
+                                <div class="search-form-top">
+                                    <label>Enter Zip Code</label>
+                                    <input type="text" id="zipcode" name="zipcode" value="Zip Code" style="display: inline;" onfocus="if (this.value == 'Zip Code') { this.value = ''; }" onblur="if (this.value == '') { this.value = 'Zip Code'; }" />
+                                    <select name="maxdistance" id="maxdistance" style="display: inline;">
+                                        <option value="10">Within 10 miles</option>
+                                        <option value="20">Within 20 miles</option>
+                                        <option value="50">Within 50 miles</option>
+                                        <option value="75">Within 75 miles</option>
+                                        <option value="100">Within 100 miles</option>
+                                    </select>
+                                    <label>Minimum Rent</label>
+                                    <input type="number" id="minrent" name="minrent" value="0" style="display: inline;" min="0" onblur="if ( this.value == '') { this.value = '0'; }" />
+                                    <label>Maximum Rent</label>
+                                    <input type="number" id="maxrent" name="maxrent" value="1000" style="display: inline;" min="0" onblur="if ( this.value == '') { this.value = '1000'; }" />
+                                </div>
+                                <div class="search-form-bottom">
+                                    <select name="propertytype" id="propertytype" style="display: inline;">
+                                        <option value="Any Type"></option>
+                                        <option value="House">House</option>
+                                        <option value="Apartment">Apartment</option>
+                                        <option value="Townhouse">Townhouse</option>
+                                        <option value="Duplex">Duplex</option>
+                                    </select>
+                                    <label>Is Property Accessible?</label>
+                                    <select name="accessible" id="accessible">
+                                        <option value=""></option>
+                                        <option value="Yes">Yes</option>
+                                        <option value="No">No</option>
+                                    </select>
+
+                                </div>
+                            </div>
+                            <div class="col-sm-12">
+                                <input type=submit class="btn btn-lg btn-primary" style="display: inline; margin: 0 auto;" onclick="if ( minrent.value == '') { minrent.value = '0'; }" />
+                            </div>
+                        </div>
+                }
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
